# obs-screenshot-plugin

./: CMakeLists.txt  README.md  buildspec.json  screenshot-filter.c
.github/scripts/: check-cmake.sh
.github/workflows/: main.yml
cmake/bundle/windows/: installer-Windows.iss.in
